--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>REPT</title>
+    <title>REA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -66,7 +66,7 @@
 
     <div class="container-narrow">
       <div class="header">
-        <h4 class="text-muted">REPT : Regional Emissions Inventory Processing Tool (Beta)</h4>
+        <h4 class="text-muted">REA : Regional atmospheric environment (Beta)</h4>
       </div>
 
       <hr>
@@ -84,7 +84,7 @@
 
           <h4>Source code</h4>
           <p>The source code is released under a GPLv3 licence at Github:</p>
-          <p><a href="index1.html" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
+          <p><a href="forecast.html" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
         </div>
       </div>
 
@@ -95,35 +95,18 @@
       <div class="row-fluid">
         <div class="span6">         
            <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_TEMP_2022050907.gif"/>
+	   <hr>
 	   <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/eva_temp.png"/>
         </div>
 
         <div class="span6">
            <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_PM25_2022050907.gif"/>
+	   <hr>
            <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/eva_pm25.png"/>
         </div>
       </div>
 
-
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-
   </body>
 </html>
 
