--- a/forecast.html
+++ b/forecast.html
@@ -68,7 +68,7 @@
 
       <h4>Forecast Systerm <h4>
 	  <h5>update time: 2022-05-21 10:00 <h5>
-	  <h5><input type="button" value="返回" onclick="javascript:history.back();"><h5>
+          <p><a onclick="javascript:history.back();" class="btn btn-success btn-lg" role="button">返回 &raquo;</a></p>
       <hr>
       <div class="row-fluid">
         <div class="span6">         
