--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="span6">
 
-          <h4>Source code</h4>
+          <h4>Forecast</h4>
           <p>The source code is released under a GPLv3 licence at Github:</p>
           <p><a href="forecast.html" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
         </div>
@@ -90,7 +90,7 @@
 
       <hr>
 
-      <h4>Example output</h4>
+      <h4>Evaluation</h4>
 
       <div class="row-fluid">
         <div class="span6">         
