--- a/forecast.html
+++ b/forecast.html
@@ -107,7 +107,7 @@
 				interval: 50,
 				width : "5000px",
 				height : "10000px",
-				icondir:  ''
+				icondir:  'images/'
 				
 				
 			  });
