--- a/forecast.html
+++ b/forecast.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>REA(Regional atmospheric environment)</title>
+    <title>RAE(Regional atmospheric environment)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
