--- a/forecast.html
+++ b/forecast.html
@@ -326,7 +326,7 @@
 		 <div id='ipDiv5'></div>
 			<script>
 			  ip = new ImagePlayer({
-				element: 'ipDiv5,
+				element: 'ipDiv5',
 				images: [  
 				  'https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_NO2_01.png',
 				  'https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_NO2_02.png',
@@ -769,7 +769,7 @@
 		 <div id='ipDiv12'></div>
 			<script>
 			  ip = new ImagePlayer({	
-				element: 'ipDiv12,
+				element: 'ipDiv12',
 				images: [  
 				  'https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_Precip_01.png',
 				  'https://geek-007.oss-cn-beijing.aliyuncs.com/website/figures/D01_Precip_02.png',
