--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <div class="span6">
 
           <h4>Forecast</h4>
-          <p>The source code is released under a GPLv3 licence at Github:</p>
+          <p>If you want to see more simulation results, check out more:</p>
           <p><a href="forecast.html" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
         </div>
       </div>
 
       <hr>
 
-      <h4>Evaluation (Update: 2022-11-30 11:01)</h4>
+      <h4>Evaluation (Update: 2022-11-30 11:38)</h4>
       <hr>
       <div class="row-fluid">
         <div class="span6">         
