--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
 <title>404</title>
 </head>
 <body>
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://www.tongqingqing.name" homePageName="回到我的主页"></script>
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://geek-007.github.io" homePageName="回到我的主页"></script>
 </body>
 </html>
